--- a/main.html
+++ b/main.html
@@ -19,6 +19,8 @@
 			<th>REVIVES</th>
 			<th>WIN</th>
 		</tr>
+		</thead>
+		<tbody>
 			<tr>
 				<td>Hackerman</td>
 				<td>10</td>
@@ -51,8 +53,8 @@
 				<td>5</td>
 				<td>1</td>
 			</tr>
+			</tbody>
 	</table>
-	</thead>
 
         
 </body>
